--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <img src="perfil.jpg" class="rounded float-right"/>
+                    <img src="/public/perfil.jpg" class="rounded float-right"/>
                 </div>
                 <div class="col" style="text-align:center">
                     
